get user from data base

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -198,20 +198,20 @@
                 <!-- Profile -->
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
-                    <!-- <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false"><img [src]="user.imageURL" alt="user"
-                            class="profile-pic" [ngClass]="{'img': !google}" /></a> -->
+                            class="profile-pic" [ngClass]="{'img': !google}" /></a>
                     <div class="dropdown-menu dropdown-menu-right animated fadeIn fast">
                         <ul class="dropdown-user">
                             <li>
                                 <div class="dw-user-box">
-                                    <!-- <div class="u-img"><img [src]="user.imageURL" alt="user" class="ddl-img"></div> -->
+                                    <div class="u-img"><img [src]="user.imageURL" alt="user" class="ddl-img"></div>
                                     <div class="u-text">
-                                        <!-- <h4>{{ user.name }}</h4>
+                                        <h4>{{ user.name }}</h4>
                                         <p class="text-muted">{{ user.email | slice:0:22 }}{{ user.email.length > 22 ?
                                             '...': '' }}
                                         </p><a routerLink="profile" class="btn btn-rounded btn-danger btn-sm">View
-                                            Profile</a> -->
+                                            Profile</a>
                                     </div>
                                 </div>
                             </li>
