--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -220,11 +220,11 @@
                             <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
                             <li><a href="#"><i class="ti-email"></i> Inbox</a></li>
                             <li role="separator" class="divider"></li>
-                            <!-- <li><a routerLink="account-settings"><i class="ti-settings"></i> {{ idiom.accountSettings }}
-                                </a></li> -->
+                            <li><a routerLink="account-settings"><i class="ti-settings"></i> {{ idiom.accountSettings }}
+                                </a></li>
                             <li role="separator" class="divider"></li>
-                            <!-- <li><a (click)="logOut()" class="cursor"><i class="fa fa-power-off "></i> {{ idiom.logOutBtn
-                                    }}</a></li> -->
+                            <li><a (click)="logOut()" class="cursor"><i class="fa fa-power-off "></i> {{ idiom.logOutBtn
+                                    }}</a></li>
                         </ul>
                     </div>
                 </li>
