--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,14 +7,11 @@
         <!-- Sidebar navigation-->
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
-
                 <li [class]="item.class" *ngFor="let item of menuItems">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                        <!-- <img [src]="user.imageURL" alt="user" *ngIf="!item.icon" class="profile-pic img" /> -->
-                        <i [class]="item.icon" *ngIf="item.icon"></i><span class="hide-menu">{{item.title}}
-                            <span
-                                class="label label-rouded label-themecolor pull-right">{{item.submenu.length}}</span></span>
-                    </a>
+                        <img [src]="user.imageURL" alt="user" *ngIf="!item.icon" class="profile-pic img" />
+                        <i [class]="item.icon" *ngIf="item.icon"></i><span class="hide-menu">{{item.title ||
+                            user.name}}<span class="label label-rouded label-themecolor pull-right">{{item.submenu.length}}</span></span></a>
                     <ul aria-expanded="false" class="collapse">
                         <li *ngFor="let subItem of item.submenu">
                             <a [routerLink]="subItem.url" routerLinkActive="active"
