--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li [class]="item.class" *ngFor="let item of menuItems">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false" *ngIf="item.display">
+                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                         <img [src]="user.imageURL" alt="user" *ngIf="!item.icon" class="profile-pic img" />
                         <i [class]="item.icon" *ngIf="item.icon"></i><span class="hide-menu">{{item.title ||
                             user.name}}
